force-app/main/default/objects/MeetingQAs__c/MeetingQAs__c.object-meta.xml
<CustomObject>
    <description>JiffleNow : All meeting QuestionIds and their Answers</description>
    <label>Meeting QAs</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Meeting QAs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting QAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>