force-app/main/default/objects/MeetingQAs__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <length>7500</length>
    <type>Html</type>
</CustomField>