force-app/main/default/objects/MeetingQAs__c/fields/MeetingId__c.field-meta.xml
<CustomField>
    <fullName>MeetingId__c</fullName>
    <label>MeetingId</label>
    <referenceTo>jiffle__Meeting__c</referenceTo>
    <relationshipLabel>Meeting QAs</relationshipLabel>
    <relationshipName>Meeting_QAs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>