force-app/main/default/objects/MeetingQAs__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <formula>QuestionID__r.Question__c</formula>
    <label>Question</label>
    <type>Text</type>
</CustomField>