force-app/main/default/objects/MeetingQAs__c/fields/QuestionID__c.field-meta.xml
<CustomField>
    <fullName>QuestionID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuestionID</label>
    <referenceTo>MeetingQuestions__c</referenceTo>
    <relationshipName>Meeting_QAs</relationshipName>
    <type>Lookup</type>
</CustomField>